compiler/testData/diagnostics/tests/cast/IsErasedToErrorType.kt
// FIR_IDENTICAL
fun testing(a: Any) = a is <!UNRESOLVED_REFERENCE!>UnresolvedType<!><Int>
